[gd_scene load_steps=6 format=3 uid="uid://cvpbcbc58n77f"]

[ext_resource type="Script" path="res://Dingleberry Bush/berry_bush.gd" id="1_15cu2"]
[ext_resource type="Texture2D" uid="uid://b28mgcu4bne5g" path="res://Dingleberry Bush/berry_bush.png" id="2_tj8ey"]
[ext_resource type="Texture2D" uid="uid://c1cixjc582py3" path="res://Dingleberry Bush/berry.png" id="3_fxl21"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6ef0"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5lho"]
size = Vector2(32, 20)

[node name="StaticBody2D" type="StaticBody2D"]
position = Vector2(112, 64)
script = ExtResource("1_15cu2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_m6ef0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y5lho")

[node name="Bush" type="Sprite2D" parent="."]
texture = ExtResource("2_tj8ey")

[node name="Berry1" type="Sprite2D" parent="."]
position = Vector2(-16, 8)
texture = ExtResource("3_fxl21")

[node name="Berry2" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("3_fxl21")

[node name="Berry3" type="Sprite2D" parent="."]
position = Vector2(16, 0)
texture = ExtResource("3_fxl21")
